refactor: simplify account keyword mappings